# TMS570-DHT11

./: CMakeLists.txt  SCI_TEST.dil  SCI_TEST.hcg  SCI_TEST_linkInfo.xml  devTool.sh
include/: gio.h  het.h  rti_delay.h  sci.h
source/: gio.c  het.c  notification.c  rti_delay.c  sci.c  sys_main.c
